# ddalkkak

./: .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/desktop/: package.json
apps/desktop/src/: App.css  App.tsx  GraphPanel.tsx  ShortcutsOverlay.tsx  Sidebar.tsx  TerminalPane.tsx  pathGrant.ts  sessionStatus.ts  startups.ts  summaryActions.ts  summaryModal.ts  summaryStripper.ts  terminalRegistry.ts  usagePulse.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/prompts/: session_summary.md
apps/desktop/src-tauri/src/: capture.rs  hooks.rs  inline.rs  lib.rs  paths.rs  pty.rs  pulse.rs  summarize.rs
apps/web/: index.html  package.json
apps/web/src/: App.tsx
content/logs/dalkkak-ai/: 2026-05-25-tauri-pivot.mdx  2026-05-26-focus-split-and-keyboard-shortcuts.mdx  2026-05-26-lifecycle-decouple-mosaic-remount.mdx  2026-05-26-multi-startup-sidebar.mdx  2026-05-26-pane-exited-tauri-gui-path.mdx  2026-05-26-phase1-tauri-scaffold.mdx  2026-05-26-pty-env-claude-resume-15s.mdx  2026-05-26-single-pty-pane-working.mdx  2026-05-26-useeffect-race-new-startup-layout.mdx  2026-05-27-cross-repo-log-aggregation-setup.mdx  (+19 more)
docs/: BACKLOG.md  BLUEPRINT.md  CONNECTIVE_LAYER.md  CONTEXT.md  DECISIONS.md  ISSUES.md  MIGRATION_PLAN.md  MILESTONES.md  RESUME.md  ROADMAP.md  SHORTCUTS.md  STACK.md  USAGE_PULSE.md  VIZ_VOCABULARY.md  troubleshooting.md
logs/: .gitignore  README.md
(+20 files in other folders)
